--- a/sass/styles.css
+++ b/sass/styles.css
@@ -7,7 +7,7 @@ body{
 header{
   width: 100%;
   height:700px;
-  background: url(/Users/niimitakuya/Desktop/deitora/deitora2nd/img/mainvisual.png);
+  background: url(img/mainvisual.png);
   background-position: center center;
   background-size: cover;
 
