--- a/styles.css
+++ b/styles.css
@@ -809,7 +809,7 @@ footer .go-top {
     width: 50px;
   }
   .news .informations .information {
-    width: 500px;
+    width: 480px;
     margin: 20px  auto;
   }
   .news .informations .information .read, .news .informations .information .readfas {
@@ -825,6 +825,10 @@ footer .go-top {
   .price .underline {
     width: 50px;
   }
+  .pricemap {
+    width: 400px;
+    height: 450px;
+  }
   .map h1 {
     font-size: 48px;
   }
@@ -832,15 +836,15 @@ footer .go-top {
     width: 50px;
   }
   .map .mapcontainer {
-    width: 500px;
+    width: 480px;
     height: 250px;
   }
   .map .mapcontainer iframe {
-    width: 500px;
+    width: 480px;
     height: 250px;
   }
   .map .inner {
-    width: 500px;
+    width: 480px;
     height: 250px;
   }
   .form h1 {
@@ -850,7 +854,7 @@ footer .go-top {
     width: 50px;
   }
   .form .forminner {
-    width: 500px;
+    width: 480px;
   }
   .form .forminner .need {
     display: inline-block;
