--- a/styles.css
+++ b/styles.css
@@ -802,6 +802,9 @@ footer .go-top {
     justify-content: center;
     padding: 0 15px 0 15px;
   }
+  .cards .cardflex .card {
+    width: 320px;
+  }
   .news h2 {
     font-size: 48px;
   }
@@ -809,12 +812,12 @@ footer .go-top {
     width: 50px;
   }
   .news .informations .information {
-    width: 480px;
+    width: 320px;
     margin: 20px  auto;
   }
   .news .informations .information .read, .news .informations .information .readfas {
     display: block;
-    margin-right: 150px;
+    margin-right: 10px;
   }
   .news .informations .information a {
     display: none;
@@ -825,8 +828,11 @@ footer .go-top {
   .price .underline {
     width: 50px;
   }
-  .pricemap {
-    width: 400px;
+  .price .container img {
+    width: 320px;
+  }
+  .price .container .pricemap {
+    width: 320px;
     height: 450px;
   }
   .map h2 {
@@ -836,16 +842,22 @@ footer .go-top {
     width: 50px;
   }
   .map .mapcontainer {
-    width: 480px;
+    width: 320px;
     height: 250px;
   }
   .map .mapcontainer iframe {
-    width: 480px;
+    width: 320px;
     height: 250px;
   }
   .map .inner {
-    width: 480px;
+    width: 320px;
     height: 250px;
+  }
+  .map .inner p {
+    text-align: center;
+  }
+  .map .inner p .hoge {
+    margin-left: 30px;
   }
   .form h2 {
     font-size: 48px;
@@ -854,7 +866,7 @@ footer .go-top {
     width: 50px;
   }
   .form .forminner {
-    width: 480px;
+    width: 320px;
   }
   .form .forminner .need {
     display: inline-block;
@@ -867,7 +879,7 @@ footer .go-top {
     padding-right: 0px;
   }
   .form .forminner .namewrap #namespace {
-    width: 330px;
+    width: 200px;
   }
   .form .forminner .mailwrap {
     flex-direction: column;
@@ -880,7 +892,7 @@ footer .go-top {
     padding-right: 0px;
   }
   .form .forminner .mailwrap #mailspace {
-    width: 330px;
+    width: 200px;
     margin-left: 54px;
   }
   .form .forminner .choicewrap {
@@ -892,7 +904,7 @@ footer .go-top {
     margin-bottom: 10px;
   }
   .form .forminner .choicewrap #sikibetu {
-    width: 330px;
+    width: 200px;
     margin-left: 54px;
   }
   .form .forminner .textwrap {
@@ -904,15 +916,22 @@ footer .go-top {
     margin-right: 40px;
   }
   .form .forminner .textwrap textarea {
-    width: 330px;
+    width: 200px;
     height: 150px;
     font-size: 16px;
     margin-left: 54px;
   }
   .form .forminner .radio {
     padding: 0;
-    margin-left: 54px;
-    text-align: center;
+    margin-left: 10px;
+    vertical-align: top;
+  }
+  .form .forminner .radio label {
+    font-size: 14px;
+  }
+  footer {
+    width: 100%;
+    height: 400px;
   }
   footer .footer-container {
     flex-direction: column;
@@ -937,10 +956,14 @@ footer .go-top {
     padding: 0;
   }
   footer .footer-container .footerright {
+    display: flex;
     margin: 0 auto;
   }
+  footer .footer-container .footerright img {
+    justify-content: center;
+  }
   footer .go-top img {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
   }
 }
